# FeedsAI

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  FeedsAI.bat  LICENSE  README.md  USER_README.md  profile.md.example  pyproject.toml  sources.yaml.example
app/: config.py  content_signals.py  db.py  dedup.py  desktop_launcher.py  digest_modes.py  engagement.py  explain.py  feed_qa.py  fetch_engine.py  launcher.py  learning.py  llm.py  main.py  observability.py  onboarding.py  paths.py  pipeline.py  profile_update.py  rank.py  reason_labels.py  search.py  source_config.py  source_quality.py  startup.py  summarize.py  templates_config.py
app/ingest/: __init__.py  arxiv.py  github.py  hn.py  rss.py
app/routes/: ask.py  digest.py  items.py  learning.py  logs.py  search.py  settings.py  setup.py  sources.py  status.py
app/templates/: ask.html  base.html  digest.html  (+9 more)
docs/: next-product-plan.md
prompts/: rank_v1.txt  summarize_v1.txt
scripts/: build_windows_app.ps1  fetch.py  healthcheck.py  init.py  register_task.ps1  run_server.ps1  start_app.ps1  task_status.ps1  update_profile.py
tests/: test_content_signals.py  test_db.py  test_dedup.py  test_digest_modes.py  test_engagement.py  test_explain.py  test_feed_qa.py  test_fetch_engine.py  test_launcher.py  test_learning.py  test_learning_route.py  test_llm.py  test_onboarding.py  test_paths.py  test_pipeline.py  test_profile_update.py  test_rank.py  test_reason_labels.py  test_search.py  test_search_route.py  test_settings_sources_route.py  test_source_config.py  test_source_quality.py  test_status_route.py
(+2 files in other folders)
