[project]
name = "feedsai-starter"
version = "0.1.0"
description = "FeedsAI Starter — a local-first, LLM-ranked feed reader you tune with a markdown profile. Fork-and-go template."
authors = [{ name = "FeedsAI Starter contributors" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "rapidfuzz>=3.9.0",
    "bleach>=6.1.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "filelock>=3.15.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
feedsai = "app.desktop_launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"app/templates" = "app/templates"
"prompts" = "prompts"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
]
